# UF_FICEN_AYUDANTIA_IRI_2022_2C

./: .gitignore  .gitmodules  CMakeLists.txt  Pseudo_Figuras.xlsx  README.md
Clase_Practica/26_8/: 26_8.md
Clases_Practica/: CMakeLists.txt
Clases_Practica/IntroCPP/: CMakeLists.txt  intro.h  main.cpp
Clases_Practica/Pruebas/: CMakeLists.txt
Clases_Practica/Testing_Stuffs/: .gitignore  CMakeLists.txt  ______CMakeLists.txt  main.cpp
EJEMPLOS/Ejemplo_Vector/: .gitignore  CMakeLists.txt  main.cpp
EJEMPLO_PROYECTO_+_UNIT_TEST/: IRI_2021.sln
Guia Memoria Dinamica/: .gitignore  CMakeLists.txt  ejercicio_10.hpp  main.cpp
Practica/IntroCPP/: CMakeLists.txt  intro.cpp
Practica/Pruebas/: main.cpp
Repaso Parcial/: CMakeLists.txt  read_files.hpp  structs.hpp
Resolucion_Tarea/Tarea_III_Algoritmos_Figuras/: .gitignore  CMakeLists.txt  main.cpp
Tutoriales/Tutorial_PseudoEnCpp/: Tutorial.md
Tutoriales/Tutorial_PseudoEnCpp/Tutorial_Pseudo/: CMakeLists.txt  Tutorial_Pseudo.cpp  Tutorial_Pseudo.h
